--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>泛商汇 - 零售POS管理系统</title>
+		<title>泛汇 - 零售POS管理系统</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<!--Set the descritpion of you site-->
-		<meta name="description" content="泛商汇 - 收银 收银机 POS 零售管理系统 进销存 会员系统 CRM 服装 百货 零售">
+		<meta name="description" content="泛汇 - 收银 收银机 POS 零售管理系统 进销存 会员系统 CRM 服装 百货 零售">
 		<!--Set author of your site-->
-		<meta name="author" content="Extensivepro - 泛盈科技">
+		<meta name="author" content="Extensiv - 泛盈科技">
 		<!--Main Bootstrap styling-->
     <link href="http://cdn.bootcss.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
 		<!--Custom styling-->
@@ -42,12 +42,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a href="http://www.extensivepro.com" class="navbar-brand"><img class="img-responsive" src="img/logo.png" alt=""></a>
+				<a href="/" class="navbar-brand"><img class="img-responsive" src="img/logo.png" alt=""></a>
 				<div class="navbar-collapse collapse navbar-responsive-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#intro">首页</a></li>
 						<li><a href="#products">产品服务</a></li>
-						<li><a href="#future-header">泛商汇</a></li>
+						<li><a href="#future-header">泛汇</a></li>
 						<li><a href="#peripheral">iPad外设</a></li>
             <li><a href="#faq">常见问题</a></li>
 						<li><a href="#about-header">关于我们</a></li>
@@ -91,7 +91,7 @@
 						<i class="icon-tablet green"></i>
 						<h2>免费iPad收银机</h2>
 						<h4>进销存开店一台搞定</h4>
-						<p><small>应用商店免费下载《泛商汇POS》App，iPad立马变身收银机，还有进销存。</small></p>
+						<p><small>应用商店免费下载《泛汇POS》App，iPad立马变身收银机，还有进销存。</small></p>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<i class="icon-desktop yellow"></i>
@@ -173,7 +173,7 @@
 							</div>
 							<div class="col-lg-10 col-sm-10">
 								<h3>免费使用</h3>
-								<p><small>《泛商汇POS》可以在苹果应用商店免费下载到，全部功能都可以用。</small></p>
+								<p><small>《泛汇POS》可以在苹果应用商店免费下载到，全部功能都可以用。</small></p>
 							</div>
 							<div class="col-lg-2 col-sm-2">
 								<span class="icon-stack">
@@ -183,7 +183,7 @@
 							</div>
 							<div class="col-lg-10 col-sm-10">
 								<h3>安装简单</h3>
-								<p><small>《泛商汇POS》收银软件下载就用。打印设备线接好就能使用。RMS在线零售管理点击右上角 <a href="http://s.fankahui.com" target="_blank" style="color:green">登录</a>。</small></p>
+								<p><small>《泛汇POS》收银软件下载就用。打印设备线接好就能使用。RMS在线零售管理点击右上角 <a href="http://s.fankahui.com" target="_blank" style="color:green">登录</a>。</small></p>
 							</div>
 						</div>
 					</div>
@@ -242,7 +242,7 @@
 
 	<!--start future header section-->
 		<section id="future-header" class="header slider-header">
-			<h1>泛商汇</h1>
+			<h1>泛汇</h1>
 			<div id="carousel_header_future" class="carousel slide fadeing">
 				<div class="carousel-inner">
 					<div class="active item">
@@ -266,8 +266,8 @@
         <div class="row">
 					<div class="col-md-6 col-sm-12">
 						<h1>开店利器</h1>
-						<p class="lead">你还在用台式电脑收银？<br> - 弱爆了，泛商汇一分钟让你的店变身高大上。<br><br>
-						<small>你的店租金很贵？<br> - iPad用起来不占地方。<br>晚上关门回家还能盘下今天账吗？<br> - iPad带回家或者在家上泛商汇RMS就可以盘账了。</small></p>
+						<p class="lead">你还在用台式电脑收银？<br> - 弱爆了，泛汇一分钟让你的店变身高大上。<br><br>
+						<small>你的店租金很贵？<br> - iPad用起来不占地方。<br>晚上关门回家还能盘下今天账吗？<br> - iPad带回家或者在家上泛汇RMS就可以盘账了。</small></p>
 					</div>
 					<div class="col-md-6 col-sm-12 icons">
 						<div class="row">
@@ -319,7 +319,7 @@
 					</div>
 					<div class="col-lg-6 col-md-12">
 						<div class="row">
-						<h1 class="col-md-10 pull-left">泛商汇 POS</h1>
+						<h1 class="col-md-10 pull-left">泛汇 POS</h1>
             <a href="https://itunes.apple.com/cn/app/fan-shang-huipos/id557518575?mt=8" class="col-md-2">
               <img class="img-responsive" src="img/expropos.png">
               <br>
@@ -340,7 +340,7 @@
         <div class="row">
 					<div class="col-lg-6">
 						<h1>进销存</h1>
-						<p class="lead">你可以用《泛商汇POS》基本搞定一个店铺日常经营所需的东西。<br><br><br>
+						<p class="lead">你可以用《泛汇POS》基本搞定一个店铺日常经营所需的东西。<br><br><br>
 						<small>即使是多店的商户，账目、商品信息也可以通过联网的方式共享。</small></p>
 					</div>
 					<div class="col-lg-6 icons">
@@ -400,7 +400,7 @@
 						</div>
 					</div>
 					<div class="col-lg-6">
-						<h1>泛商汇 RMS</h1>
+						<h1>泛汇 RMS</h1>
 						<p class="lead">
               你有好几家店，或者你的店大要好几台iPad才行，怎么才能看到全部的营业情况呢？ 
               <br><br>             
@@ -414,7 +414,7 @@
 					<div class="col-lg-6">
 						<h1>统计分析</h1>
 						<p class="lead">21世纪的老板，你怎么还能靠晚上回家数钱才知道，亏了！赚了？<br><br>
-						<small>泛商汇让你马上就知道卖了多少，什么卖的好，哪些会员是你真正的VIP，哪些才你的明星员工。</small></p>
+						<small>泛汇让你马上就知道卖了多少，什么卖的好，哪些会员是你真正的VIP，哪些才你的明星员工。</small></p>
 					</div>
 					<div class="col-lg-6 icons">
 						<div class="row">
@@ -509,7 +509,7 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<h1 class="text-center">iPad 周边设备</h1>
-						<p class="text-center">下面的设备都是经过我们适配过，可以与《泛商汇POS》配合使用，如果有需要可以咨询我们。
+						<p class="text-center">下面的设备都是经过我们适配过，可以与《泛汇POS》配合使用，如果有需要可以咨询我们。
             </p>
 					</div>
 				</div>
@@ -628,7 +628,7 @@
     		          <div class="wpb_wrapper">
                   
                     <blockquote>
-                      <p style="font-size:100%">用泛商汇POS怎么收银？
+                      <p style="font-size:100%">用泛汇POS怎么收银？
                         <small style="color: #5A5A5A">收银时首先选择顾客身份，选择之后需要通过商品条码来确定顾客购买的商品，如果配置了扫码枪可以直接扫描条码，否则需要手动录入，最后结算完成收银。
                         </small>
                       </p>
@@ -641,7 +641,7 @@
     		          <div class="wpb_wrapper">
                   
                     <blockquote>
-                      <p style="font-size:100%">用泛商汇POS怎么进货？
+                      <p style="font-size:100%">用泛汇POS怎么进货？
                         <small style="color:#5A5A5A">进货时首先要录入商品条码，如果配置了扫描枪可以直接扫描条码，否则需要手动录入。当录入条码后继续完善所需填写的商品信息即可完成一次进货。
                         </small>
                       </p>
@@ -656,7 +656,7 @@
 			
                     <blockquote>
                       <p style="font-size:100%">如何连接扫码枪？
-                        <small style="color: #5A5A5A">打开iPad设备中的“设置”功能，找到“蓝牙”后将其开启，等待搜索到蓝牙扫码枪，然后可根据扫码枪说明书中“与iOS系统配对”的说明步骤完成配对。当匹配成功后，打开泛商汇POS的登陆界面，在“设置”功能中打开蓝牙扫码枪即可使用。
+                        <small style="color: #5A5A5A">打开iPad设备中的“设置”功能，找到“蓝牙”后将其开启，等待搜索到蓝牙扫码枪，然后可根据扫码枪说明书中“与iOS系统配对”的说明步骤完成配对。当匹配成功后，打开泛汇POS的登陆界面，在“设置”功能中打开蓝牙扫码枪即可使用。
                         </small>
                       </p>
                     </blockquote>
@@ -674,7 +674,7 @@
             		  <div class="wpb_wrapper">
 	
                     <blockquote>
-                      <p style="font-size:100%">用泛商汇POS怎么盘点库存？
+                      <p style="font-size:100%">用泛汇POS怎么盘点库存？
                         <small style="color: #5A5A5A">首先要进入盘点商品库存界面，当您盘点哪件商品时就点选对应商品，录入盘点所得的数量。如果配置了扫码枪，可以直接扫描商品条码完成盘点。
                         </small>
                       </p>
@@ -687,7 +687,7 @@
               		<div class="wpb_wrapper">
 	
                     <blockquote>
-                      <p style="font-size:100%">用泛商汇POS怎么退货？
+                      <p style="font-size:100%">用泛汇POS怎么退货？
                         <small style="color: #5A5A5A">登陆收银系统，首先选择“流水”，此时需要输入所需退货商品当时的交易流水号，然后选择这件商品即可进行退货。
                         </small>
                       </p>
@@ -700,7 +700,7 @@
               		<div class="wpb_wrapper">
                     <blockquote>
                       <p style="font-size:100%">如何实现打印功能？
-                        <small style="color: #5A5A5A">打开iPad设备中的“设置”功能，找到“蓝牙”后将其开启。进入泛商汇POS登陆界面，在“设置”中选择“打印机”，然后将“蓝牙打印”开启，即可实现打印，每一笔销售完成时就会自动打印出刚才的交易账单。
+                        <small style="color: #5A5A5A">打开iPad设备中的“设置”功能，找到“蓝牙”后将其开启。进入泛汇POS登陆界面，在“设置”中选择“打印机”，然后将“蓝牙打印”开启，即可实现打印，每一笔销售完成时就会自动打印出刚才的交易账单。
                         </small>
                       </p>
                     </blockquote>
@@ -750,9 +750,9 @@
 						<blockquote>
 							<img class="img-responsive" src="img/headers/contact.png">
 							<br><br>
-							地址: 南京市江宁区胜太路68号科技创业中心303室<br>
-							电话: (+86) 025-52123550 (Fax) 025-58679066 <br>
-							电子邮件：info@extensivepro.com
+							地址: 南京市江宁区胜太路55号科技创业中心112室<br>
+							电话: (+86) 025-52135522 (Fax) 025-58679966 <br>
+							电子邮件：info@extensiv.com
 						</blockquote>
 					</div>
 					<div class="col-lg-3 col-md-6">
@@ -770,7 +770,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 col-sm-6 margin copy">
-						<p>2013 &copy; Extensivepro - 泛盈科技</p>
+						<p>2013 &copy; Extensiv - 泛盈科技</p>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-offset-2 margin social">
 						苏ICP备11080999号-2
